crates/kwokka-macros/tests/ui/legacy.rs
#[kwokka::main(scheduler = "affine")]
async fn main() {}
